tests/baselines/reference/parserTypeQuery3.errors.txt
parserTypeQuery3.ts(1,15): error TS2304: Cannot find name 'A'.
parserTypeQuery3.ts(1,17): error TS1003: Identifier expected.


==== parserTypeQuery3.ts (2 errors) ====
    var v: typeof A.
                  ~
!!! error TS2304: Cannot find name 'A'.
                    
!!! error TS1003: Identifier expected.